feat: add reconstruction of generated response + add pagination to elastic document search
